# attendance-api

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  install.sh  readme.md
migrations/attendance_type/: up.sql
migrations/attendances/: down.sql  up.sql
migrations/create_attendance/: down.sql  up.sql
src/: main.rs  schema.rs
src/data/: mod.rs
src/data/attendance/: attendance_entity.rs  attendance_repository.rs  mod.rs
src/database/: database.rs  mod.rs
src/domain/: mod.rs
src/domain/attendance/: attendance_model.rs  attendance_service.rs  mod.rs
src/extension/: mod.rs  to_two_digits.rs
src/presentation/: mod.rs
src/presentation/attendance/: attendance_controller.rs  attendance_resource.rs  mod.rs
