[package]
name = "attendance_api"
version = "0.1.0"
authors = ["atsushi130 <atsushi_main@outlook.jp>"]

[dependencies]
rocket = "0.3.6"
serde  = "0.9"
serde_derive   = "0.9"
serde_json     = "0.9"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"