[package]
name = "attendance_api"
version = "0.1.0"
authors = ["atsushi130 <atsushi_main@outlook.jp>"]

[dependencies]
rocket = "0.3.6"
chrono = "0.4"
serde  = "1.0"
serde_derive   = "1.0"
serde_json     = "1.0"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
reduce = "0.1"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
r2d2   = "0.8.2"
r2d2-diesel = "1.0.0"
